# docs/swagger.yaml
@@ -104,6 +104,32 @@ definitions:
     - OrderTypeMarket
     - OrderTypeMarketQuantity
     - OrderTypeMarketAmount
+  internal_modules_base_order.CreateOrderRequest:
+    properties:
+      amount:
+        type: number
+      order_type:
+        allOf:
+        - $ref: '#/definitions/github_com_yzimhao_trading_engine_v2_pkg_matching_types.OrderType'
+        example: limit
+      price:
+        example: 1
+        type: number
+      qty:
+        example: 12
+        type: number
+      side:
+        allOf:
+        - $ref: '#/definitions/github_com_yzimhao_trading_engine_v2_pkg_matching_types.OrderSide'
+        example: buy
+      symbol:
+        example: btcusdt
+        type: string
+    required:
+    - order_type
+    - side
+    - symbol
+    type: object
 info:
   contact: {}
 paths:
@@ -319,19 +345,18 @@ paths:
       summary: trades
       tags:
       - market
-  /api/v1/order/create:
+  /api/v1/order:
     post:
       consumes:
       - application/json
-      description: create order
-      operationId: v1.order.create
+      operationId: v1.order
       parameters:
       - description: args
         in: body
         name: args
         required: true
         schema:
-          $ref: '#/definitions/controllers.OrderCreateRequest'
+          $ref: '#/definitions/internal_modules_base_order.CreateOrderRequest'
       produces:
       - application/json
       responses:
@@ -339,7 +364,7 @@ paths:
           description: OK
           schema:
             type: string
-      summary: create order
+      summary: 创建订单
       tags:
       - order
   /api/v1/order/history:
